# tx-engine

./: Cargo.toml  README.md  accounts.csv  transactions.csv
src/: account.rs  engine.rs  error.rs  main.rs  transaction.rs
tests/: e2e_tests.rs
tests/data/: expected_output1.csv  expected_output2.csv  expected_output3.csv  expected_output4.csv  expected_output5.csv  expected_output6.csv  expected_output7.csv  expected_output8.csv  input1.csv  input2.csv  input3.csv  input4.csv  input5.csv  input6.csv  input7.csv  input8.csv
