[package]
name = "process-tx"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0"
csv = "1.3.0"
chrono = "0.4.38"
predicates = "3.1.2"
rstest = "0.23.0"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.66"

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = "deny"
